[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ticket/scratch_area.gd" id="1_scratch"]

[node name="ScratchArea" type="Control"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_scratch")

[node name="SymbolPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SymbolLabel" type="Label" parent="SymbolPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
vertical_alignment = 1
mouse_filter = 2

[node name="CoverPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CoverLabel" type="Label" parent="CoverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "###"
horizontal_alignment = 1
vertical_alignment = 1
mouse_filter = 2
